src/styles/styles.css
:root {
  --black-light: #2f3542;
  --red: #c0392b;
  --grey: #a4b0be;
  --light-text: #f5f6fa;
}


body {
  margin: 0;
  background-color: #1e1e1e;
  color: #fefdfb;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

button {
  padding: 4px 8px;
}

form {
  position: relative;
  gap: 8px;
  width: 100%;
  height: 100%;
}

i {
  user-select: none;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.column {
  flex-direction: column;
}

.root {
  position: relative;
  height: 100vh;
}

.hidden {
  display: none;
}

.settings-icon {
  position: absolute;
  top: 0;
  right: 0;
  margin: 12px;
  cursor: pointer;
  user-select: none;
}

.settings-icon:hover {
  opacity: 0.8;
}

.modal-window {
  position: absolute;
  top: 0px;
  right: 0px;
  height: 100vh;
  width: 375px;
  max-width: 40vw;
  background-color: var(--black-light);
  /* border-radius: 6px 0 0 6px; */
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  justify-content: flex-start;
  overflow: auto;
  color: var(--light-text);
}

.red {
  color: var(--red);
}

.card {
  margin: 8px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.125);
  border: 1px solid rgba(245, 246, 250, 0.25);
  width: 95%;
  height: 48px;
  position: relative;
  transition: height 0.3s ease-in-out;
  cursor: pointer;
}

.open {
  height: 96px;
}

.modal-window>h1,
.card>div {
  margin: 5%;
}

.center.card {
  font-size: larger;
  font-weight: 600;
}

.link-text {
  position: absolute;
  bottom: -10px;
  left: 0;
  font-size: 10px;
  font-style: italic;
  display: flex;
  gap: 4px;
  align-items: flex-end;
  width: 90%;
  height: 100%;
}

.link-text>form>input {
  display: flex;
  border: none;
  color: var(--light-text);
  background-color: transparent;
  font-size: 10px;
  font-style: italic;
  overflow: hidden;
  text-overflow: ellipsis;
}

.link-text>form {
  width: 100%;
  transform: translateY(2px);
  display: flex;
  align-items: flex-end;
}

.link-text>i {
  font-size: 14px;
}

.link-actions {
  position: absolute;
  top: -6px;
  right: -6px;
  display: flex;
  gap: 4px;
}

.action {
  font-size: 16px;
  cursor: pointer;
}

.add-widget {
  background-color: rgba(164, 176, 190, 0.3);
  user-select: none;
  cursor: pointer;
}

.add-widget.open {
  cursor: default;
}

.add-widget:hover {
  background-color: rgba(164, 176, 190, 0.5);
}

.edit-color {
  opacity: 1;
  transition: opacity 0.05s 0.08s ease-in-out;
  position: absolute;
  bottom: 0;
  right: 0;
  overflow: visible;
}

.edit-color>.color-picker-parent>.popover {
  transform: translateX(-153px);
}

.invis {
  opacity: 0;
}

input {
  width: 70%;
  border: none;
  border-bottom: 1px solid #1e1e1e;
  background: var(--grey);
  margin: 4px;
  font-style: italic;
}

input:focus {
  outline: none;
}

form>button {
  position: absolute;
  bottom: 4px;
  right: 4px;
  border: none;
  background: none;
  cursor: pointer;
}

form>button:hover {
  background-color: rgba(30, 30, 30, 0.1);
}

form>div {
  position: absolute;
  bottom: 0;
  left: 4px;
  display: flex;
  gap: 4px;
  align-items: center;
}

.color-picker-button {
  width: 40px;
  height: 20px;
  border-radius: 4px;
  outline: 1px solid #1e1e1e;
  cursor: pointer;
}

.cover {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.popover {
  position: absolute;
  z-index: 2;
  bottom: unset;
  right: unset;
  top: 31px;
  left: -16px;
}

.swatch {
  padding: 5px;
  background: "#fff";
  border-radius: 1px;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, .1);
  display: inline-block;
  cursor: pointer;
}

.color-picker {
  color: whitesmoke;
}

.widget-container {
  font-size: 2.25vw;
  letter-spacing: -0.2px;
  cursor: pointer;
}

img {
  width: 2.5vw
}

